Fixed issue to have logo clickable on focused search box. Click on "x" == clock on logo also (because of opacity=0) and will start notification popover. We do not want this. moved logo to layer behind.

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -2251,6 +2251,7 @@ footer {
 
   .search.focused .logo {
     opacity: 0;
+    z-index: -1;
   }
 
   .search .logo {
